fixed DeviceDTO